--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <!-- Jumbotron -->
   <section class="jumbotron text-center">
-    <img src="../diii.jpg" alt="Divi Abdillah Almasrur" width="200" class="rounded-circle img-thumbnail">
+    <img src="diii.jpg" alt="Divi Abdillah Almasrur" width="200" class="rounded-circle img-thumbnail">
     <h1 class="display-4">DIVI ABDILLAH ALMASRUR</h1>
     <p class="lead">Newbie Front-end Dev.</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,192L34.3,176C68.6,160,137,128,206,144C274.3,160,343,224,411,229.3C480,235,549,181,617,170.7C685.7,160,754,192,823,208C891.4,224,960,224,1029,202.7C1097.1,181,1166,139,1234,144C1302.9,149,1371,203,1406,229.3L1440,256L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
