--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/html.svg" class="card-img-top" alt="hml5">
+              <img src="html.svg" class="card-img-top" alt="hml5">
               <div class="card-body">
                 <p class="card-text">HTML atau singkatan dari Hypertext Markup Language, ini adalah bahasa standar untuk membuat halaman website</p>
               </div>
@@ -82,7 +82,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/css3.svg" class="card-img-top" alt="css3">
+              <img src="css3.svg" class="card-img-top" alt="css3">
               <div class="card-body">
                 <p class="card-text">CSS atau singkatan dari Cascading Styles Sheet, ini adalah bahasa pemerograman untuk mengatur tampilan dan format halaman</p>
               </div>
@@ -90,7 +90,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/bootstrap.svg" class="card-img-top" alt="bootsrap5">
+              <img src="bootstrap.svg" class="card-img-top" alt="bootsrap5">
               <div class="card-body">
                 <p class="card-text">Bootsrap adalah sebuah Framework CSS dan Javascript dan sumber terbuka yang digunakan untuk membuat situs web dan aplikasi web. Ini adalah salah satu framework web paling populer di dunia, dengan lebih dari 11 juta bintang di GitHub.</p>
               </div>
