--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
-    <link name="google-site-verification" content="DzGLg4VkyWyVnuZNAlu1EFsebIOP0QNeie_Jc2VAbtk">
+    <meta name="google-site-verification" content="Tve6s6ILgbDkZQHqLR77aBCv-Ub0YIdakWpwNkVvEik" />
   </head>
   <body>
     <!-- Navbar start -->
