--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
   </head>
   <body>
     <!-- Navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg bg-primary shadow-sm fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">DIV.web</a>
+    <a class="navbar-brand text-white" href="#">DIV.web</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#home">Home</a>
+          <a class="nav-link text-white" href="#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link text-white" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#project">Project</a>
+          <a class="nav-link text-white" href="#project">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link text-white" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -134,8 +134,8 @@
     </section>
     <!-- Contact end -->
     <!-- footer start -->
-    <footer class="bg-primary text-light text-center p-5">
-      <p>Create with diganggu ayangg<i class="bi bi-arrow-through-heart-fill"></i> by <a href="https://instagram.com/vi_abdillah?igshid=OGQ5ZDc2ODk2ZA==" class="text-light fw-bold text-decoration-none">Divi Abdillah</a></p>
+    <footer class="bg-primary text-white text-center p-5">
+      <p class="text-white">Create with diganggu ayangg<i class="bi bi-arrow-through-heart-fill"></i> by <a href="https://instagram.com/vi_abdillah?igshid=OGQ5ZDc2ODk2ZA==" class="text-white fw-bold text-decoration-none">Divi Abdillah</a></p>
     </footer>
     <!-- footer end -->
     
